--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,12 @@ body{
     font-size: 42px;
     color: white;
 }
+
+h3{
+	font-size: 35px;
+	color: light-gray;
+}
+
 p {
     font-size: 18px;
     color: lightgray;
